src/test/deca/context/invalid/our_tests/alex-not-I.deca
// Description:
//    Test contextuellement invalide sur un not, rule 3.63
//
// Resultats:
//    DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:42) - verify
//    program: start
//    DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass
//    (ListDeclClass.java:46) - verify listClass: start
//    DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass
//    (ListDeclClass.java:52) - verify listClass: end
//    DEBUG fr.ensimag.deca.tree.Main.verifyMain(Main.java:37) - verify Main:
//    start
//    ./src/test/deca/context/invalid/our_tests/alex-not-I.deca:20:8: Expected
//    boolean got int (rule 3.63)
//
// Historique:
//    20/01/2017

{
    if(!42){
        println("EXIT FAILURE");
    }
}
